--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ body {
 /* Right-aligned link */
 .navbar a.right {
   float: right;
-}
+  }
 
 /* Change color on hover */
 .navbar a:hover {
@@ -169,6 +169,7 @@ By luck our school announced MahaExpo where students could make their own produc
 
 <div class="footer">
   <h3>ULTRON sorce code and guide will be released on 6th june 2023</h3>
+   <a> href="https://kaustubh-programmer.github.io/test2/">ULtron</a>
 </div>
 
 </body>
