--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@ body {
 <div class="header">
   <h1>PROGRAMMER KAUSTUBH</h1>
   <p>A <b>practice</b> website created by me.</p>
-</div>
+<marquee behavior="scroll" direction="right"><h1>HAPPY BIRTHDAY ANISH (COOL GUY)</h1></marquee>
+  </div>
 
 <div class="navbar">
   <a href="C:\Users\kaustubh\Desktop\ULTRON" class="active">Home</a>
