--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ body {
 <div class="header">
   <h1>PROGRAMMER KAUSTUBH</h1>
   <p>A <b>practice</b> website created by me.</p>
-<marquee behavior="scroll" direction="right"><h1>HAPPY BIRTHDAY ANISH (COOL GUY)</h1></marquee>
+<marquee behavior="scroll" direction="left"><h1>HAPPY BIRTHDAY ANISH (COOL GUY)</h1></marquee>
   </div>
 
 <div class="navbar">
