--- a/index.html
+++ b/index.html
@@ -124,14 +124,10 @@ body {
 
 <div class="header">
   <h1>PROGRAMMER KAUSTUBH</h1>
-  <p>A <b>practice</b> website created by me.</p>
-  </div>
-
-<div class="navbar">   
- <marquee width="95%" direction="left" height="100px">
-SERVER DOWN DUE TO MAINTAINENCE - kaustubh 
+  <marquee width="80%" direction="left" height="150px">
+SERVER DOWN DUE TO MAINTENANCE 
 </marquee>
-</div>
+  </div>
   
 </body>
 </html>
